--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "url": "https://github.com/jclem/path-proxy/issues"
   },
   "dependencies": {
-    "inflection": "~1.3.0"
+    "inflection": "^1.7.1"
   },
   "devDependencies": {
-    "jasmine-node": "~1.11.0"
+    "jasmine-node": "^1.14.5"
   }
 }
